--- a/style-explore.css
+++ b/style-explore.css
@@ -119,7 +119,7 @@
     scrollbar-width: none; /* Hide the scrollbar for Mozilla Firefox */
   
     margin: 0 auto 0 auto;
-    width: 90vw;
+    width: 100%;
     height: fit-content;
     
     border: 0;
@@ -144,7 +144,11 @@
 }
 
 .recommendation-section {
-    margin: 7% 7.5% 5%;
+    margin: 7% 0 5%;
+}
+
+#recommendation-text {
+    padding: 0 7.5% 0
 }
 
 .recommendation-list {
@@ -154,7 +158,7 @@
     scrollbar-width: none; /* Hide the scrollbar for Mozilla Firefox */
   
     margin: 0 auto 0 auto;
-    width: 90vw;
+    width: 100%;
     height: fit-content;
     
     border: 0;
